# maniac

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  beatmap.c  build.sh  configure.sh  devbuild.sh  main.c  memory.c  osu.h  utils.c
.github/workflows/: main.yml
app/: CMakeLists.txt  app.cpp  config.h  font.h  window.cpp  window.h
app/dependencies/: argh.h
lib/: CMakeLists.txt  humanization.cpp  maniac.cpp  osu.cpp  process.cpp
lib/include/maniac/: common.h  config.h  maniac.h  osu.h  process.h  signature.h
lib/include/maniac/osu/: internal.h  signatures.h
scripts/: README.md  find.js  test.c
src/: beatmap.c  beatmap.h  common.h  config.h  game.c  game.h  humanization.c  humanization.h  main.c  main.cpp  maniac.c  maniac.cpp  maniac.h  memory.c  osu.h  pattern.c  pattern.h  process.c  process.h  utils.c  window.c  window.h
src/debug/: test.c  testbuild.sh
src/dependencies/: argh.h  cxxopts.h
src/maniac/: humanization.cpp  maniac.cpp  maniac.h
src/osu/: humanization.cpp  internal.cpp  internal_imp.h  osu.cpp  osu.h  signatures.h
src/process/: process.cpp  process.h
